<resources>
    <string name="app_name">Jokenpo_Kotlin</string>

    <string name="opcoes">Escolha uma opção</string>
    <string name="ultimaJogada">Última Jogada</string>
    <string name="jogadaPlayer">Você</string>
    <string name="resultado">Resultado</string>
    <string name="jogadaBot">Bot</string>
    <string name="venceu">Você Venceu!</string>
    <string name="perdeu">Você Perdeu</string>
    <string name="empate">Empatou</string>
</resources>
